--- a/layui-admin-web/src/main/webapp/WEB-INF/views/product/list.html
+++ b/layui-admin-web/src/main/webapp/WEB-INF/views/product/list.html
@@ -15,10 +15,16 @@
 			</div>
 			<div class="layui-inline">
 				<div class="layui-input-inline">
-					<input type="text" value="" name="productName" id="productName" placeholder="产品名称" class="layui-input search_input">
+					<input type="text" value="" name="productName" id="productName" placeholder="商品名称" class="layui-input search_input">
 				</div>
 	<!--		    <button lay-submit class="layui-btn" lay-filter="search">查找</button>-->
 				<button lay-submit id="reloadBtn" class="layui-btn" lay-filter="search">查找</button>
+			</div>
+			<div class="layui-inline">
+				<input type="file" lay-type="file" id="import" name="file" class="layui-upload-file">
+<!--				<button type="button" class="layui-btn" id="test1">-->
+<!--					<i class="layui-icon">&#xe67c;</i>导入Excel-->
+<!--				</button>-->
 			</div>
 		</form>
 	</blockquote>
@@ -87,7 +93,7 @@
 		<td align="left" width="65">{{it.inspectionAgency}}</td>
 		<td align="left">
 			<a class="layui-btn layui-btn-mini modal-iframe" data-params='{"content": "/product/edit?id={{it.id}}", "title": "编辑","full":false,"area":"600px,480px"}'><i class="iconfont icon-edit"></i> 编辑</a>
-			<a class="layui-btn layui-btn-mini modal-iframe" data-params='{"content": "/product/addItem?id={{it.id}}", "title": "添加商品","full":false,"area":"600px,480px"}'><i class="iconfont icon-edit"></i> 添加</a>
+<!--			<a class="layui-btn layui-btn-mini modal-iframe" data-params='{"content": "/product/addItem?id={{it.id}}", "title": "添加商品","full":false,"area":"600px,480px"}'><i class="iconfont icon-edit"></i> 添加</a>-->
 			<a class="layui-btn layui-btn-danger layui-btn-mini ajax" data-params='{"url": "/product/delete","confirm":true,"data":"id={{it.id}}","complete":"reloadTab"}'><i class="layui-icon">&#xe640;</i> 删除</a>
 		</td>
 	</tr>
@@ -100,6 +106,25 @@
 	<#include "/common/version.html">
 	<script type="text/javascript">
 		layui.use('list');
+<!--		layui.use(['list', 'upload'], function() {-->
+<!--		  var upload = layui.upload;-->
+
+<!--		  //执行实例-->
+<!--		  var uploadInst = upload.render({-->
+<!--		    elem: '#test1' //绑定元素-->
+<!--		    ,url: '/product/importExcel' //上传接口-->
+<!--&lt;!&ndash;		    ,accept: 'file' //普通文件&ndash;&gt;-->
+<!--			,done: function(res){-->
+<!--				var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引-->
+<!--                parent.location.reload();//刷新父页面，注意一定要在关闭当前iframe层之前执行刷新-->
+<!--                parent.layer.close(index); //再执行关闭-->
+<!--			}-->
+<!--		    ,error: function(res){-->
+<!--		      //请求异常回调-->
+<!--		    	alert("服务器错误");-->
+<!--		    }-->
+<!--		  });-->
+<!--		});-->
 	</script>
 </body>
 </html>
